--- a/web-app/package.json
+++ b/web-app/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.1.3",
     "email-validator": "^2.0.4",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
