--- a/web-app/package.json
+++ b/web-app/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.1.16",
     "redux": "^4.2.0",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
