--- a/web-app/package.json
+++ b/web-app/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "recharts": "^2.1.16",
     "redux": "^4.2.0",
     "sass": "^1.56.1",
