--- a/web-app/package.json
+++ b/web-app/package.json
@@ -16,12 +16,13 @@
     "email-validator": "^2.0.4",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
-    "recharts": "^2.1.16",
+    "recharts": "^2.3.2",
     "redux": "^4.2.0",
     "sass": "^1.56.1",
     "web-vitals": "^2.1.4",
