--- a/web-app/package.json
+++ b/web-app/package.json
@@ -17,6 +17,7 @@
     "email-validator": "^2.0.4",
     "formik": "^2.2.9",
     "gsap": "^3.11.4",
+    "ramda": "^0.29.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
