--- a/web-app/package.json
+++ b/web-app/package.json
@@ -31,6 +31,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.56.1",
+    "sweetalert2": "^11.7.31",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
