--- a/web-app/package.json
+++ b/web-app/package.json
@@ -47,6 +47,13 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "lines": 80
+      }
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
