attempt to write test

--- a/web-app/package.json
+++ b/web-app/package.json
@@ -52,7 +52,8 @@
       "global": {
         "lines": 80
       }
-    }
+    },
+    "moduleFileExtensions": ["js", "jsx", "ts", "tsx"]
   },
   "browserslist": {
     "production": [
